Add interpreter selection to VHDL run-configuration

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -32,7 +32,7 @@
     <fileTypeFactory implementation="com.abestanis.vhdl.VHDLFileTypeFactory"/>
     <lang.parserDefinition language="VHDL" implementationClass="com.abestanis.vhdl.VHDLParserDefinition"/>
     <lang.syntaxHighlighterFactory language="VHDL" implementationClass="com.abestanis.vhdl.VHDLSyntaxHighlighterFactory"/>
-    <colorSettingsPage implementation="com.abestanis.vhdl.VHDLColorSettingsPage"/>
+    <colorSettingsPage implementation="com.abestanis.vhdl.settings.VHDLColorSettingsPage"/>
     <completion.contributor language="VHDL" implementationClass="com.abestanis.vhdl.VHDLCompletionContributor"/>
     <configurationType implementation="com.abestanis.vhdl.run.VHDLConfigurationType"/>
     <lang.foldingBuilder language="VHDL" implementationClass="com.abestanis.vhdl.editor.VHDLFoldingBuilder"/>
